# nRF_dev

examples/audioBle/: CMakeLists.txt  FILES.md  Kconfig  QUICKSTART.md  README.md  nrf7002.conf  patch_wifi_kconfig.sh  prj.conf  sysbuild.conf
examples/audioBle/boards/: nrf7002dk_nrf5340_cpuapp.conf
examples/audioBle/doc/: DESIGN.md  SHELL_COMMANDS.md
examples/audioBle/src/: main.cpp  rtp_receiver.cpp  rtp_receiver.hpp  shell_commands.cpp  shell_commands.hpp  wifi_manager.cpp  wifi_manager.hpp
examples/audioBle/src/cli/: shell_commands.cpp  shell_commands.hpp
examples/audioBle/src/net/: rtp_receiver.cpp  rtp_receiver.hpp  wifi_manager.cpp  wifi_mgr.c  wifi_mgr.h
examples/audioBle/src/wifi_old/: wifi_manager.cpp  wifi_manager.hpp
examples/audioBle/tools/: stream_audio.py
examples/peripheral_hr/: prj.conf
examples/thermal_sensor/: README.rst  prj.conf
examples/thermal_sensor/boards/: nrf7002dk_nrf5340_cpuapp.overlay
examples/thermal_sensor/src/: main.c
